# molt

./: Cargo.toml  LICENSE.txt  README.md  div.tcl  foo.tcl
benchmarks/: basic.tcl
docs/: API_notes.md  changes.html  expr.md  index.html  journal.md  overview.html  print.html  searchindex.js  searchindex.json  tcl_comp.html
docs/cmdline/: cmdline.html  molt_bench.html  molt_shell.html  molt_test.html
docs/cmdline/bench_commands/: benchmark.html  ident.html  measure.html  ok.html
docs/cmdline/test_commands/: test.html
docs/embed/: commands.html  eval.html  harness.html  library.html  molt_result.html  molt_value.html  overview.html  shell.html
docs/ref/: append.html  array.html  assert_eq.html  break.html  catch.html  continue.html  dict.html  error.html  exit.html  expr.html  for.html  foreach.html  global.html  if.html  incr.html  info.html  join.html  lindex.html  list.html  llength.html  proc.html  puts.html  reference.html  rename.html  return.html  set.html  source.html  string.html  test.html  throw.html  time.html  unset.html  while.html
molt/: Cargo.toml  README.md
molt-app/: Cargo.toml  README.md
molt-app/src/: main.rs
molt-book/: book.toml
molt-book/src/: SUMMARY.md  changes.md  overview.md  tcl_comp.md
molt-book/src/cmdline/: cmdline.md  molt_bench.md  molt_shell.md  molt_test.md
molt-book/src/cmdline/bench_commands/: benchmark.md  ident.md  measure.md  ok.md
molt-book/src/cmdline/test_commands/: test.md
molt-book/src/embed/: commands.md  eval.md  harness.md  library.md  molt_result.md  molt_value.md  overview.md  shell.md
molt-book/src/ref/: append.md  array.md  assert_eq.md  break.md  catch.md  continue.md  dict.md  error.md  exit.md  expr.md  for.md  foreach.md  global.md  if.md  incr.md  info.md  join.md  lindex.md  list.md  llength.md  proc.md  puts.md  reference.md  rename.md  return.md  set.md  source.md  string.md  test.md  throw.md  time.md  unset.md  while.md
molt-shell/: Cargo.toml  README.md
molt-shell/src/: bench.rs  bench.tcl  lib.rs  script.rs  shell.rs  test_harness.rs
molt/src/: char_ptr.rs  char_star.rs  commands.rs  dict.rs  eval_ptr.rs  expr.rs  interp.rs  lib.rs  list.rs  macros.rs  molt_err.rs  parser.rs  scope.rs  test_harness.rs  tokenizer.rs  types.rs  util.rs  value.rs  var_stack.rs
molt/tests/: all.tcl  break.tcl  catch.tcl  continue.tcl  dict.tcl  error.tcl  expr.tcl  for.tcl  if.tcl  info.tcl  llength.tcl  parser.tcl  rename.tcl  return.tcl  string.tcl  tcl_tests.rs  test.tcl  throw.tcl
notes/: API_notes.md  benchmarks.xlsx  byte_compilation.md  journal.md  list_format.txt  parsed_form.md  stack_trace.md
src/: char_ptr.rs  commands.rs  context.rs  eval.rs  expr.rs  interp.rs  lib.rs  list.rs  macros.rs  main.rs  shell.rs  test_harness.rs  types.rs  util.rs  utils.rs  value.rs  var_stack.rs
test/: README.md  all.tcl  append.tcl  array.tcl  assert_eq.tcl  break.tcl  commands.tcl  continue.tcl  exit.tcl  expr.tcl  for.tcl  foreach.tcl  global.tcl  hello_world.tcl  incr.tcl  interp.tcl  join.tcl  lappend.tcl  lindex.tcl  list.tcl  parser.tcl  proc.tcl  return.tcl  set.tcl  tclsh_test.tcl  test_commands.tcl  test_expr.tcl  test_parser.tcl  unset.tcl  while.tcl
