[package]
name = "molt-app"
version = "0.1.0"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Molt Shell Application"
license = "BSD-3-Clause"
repository = "github.com/wduquette/molt"
homepage = "wduquette.github.io/molt/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt = { path = "../molt" }
molt-shell = { path = "../molt-shell" }

[[bin]]
name = "moltsh"
path = "src/main.rs"
