[package]
name = "molt-app"
version = "0.2.1"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Molt Shell Application"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt = { version = "0.2.1", path = "../molt" }
molt-shell = { version = "0.2.1", path = "../molt-shell" }

[[bin]]
name = "moltsh"
path = "src/main.rs"
