[package]
name = "molt-shell"
version = "0.1.0"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Molt Application Frameworks"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io/molt/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt = "0.1.0"
rustyline = "5.0.0"
