[package]
name = "molt-shell"
version = "0.2.1"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Molt Application Frameworks"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
molt = { version = "0.2.1", path = "../molt" }
rustyline = "5.0.0"
