[package]
name = "molt"
# Remember to update html_root_url in lib.rs
version = "0.1.0"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Embeddable TCL interpreter for Rust applications"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io/molt/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
