[package]
name = "molt"
version = "0.2.2"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2018"
description = "Embeddable TCL interpreter for Rust applications"
license = "BSD-3-Clause"
repository = "https://github.com/wduquette/molt"
homepage = "https://wduquette.github.io/"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
indexmap = "1.3.0"
